Fix dropdown hiding behind the dialog (BL-4386)

--- a/src/BloomBrowserUI/bookEdit/StyleEditor/StyleEditor.less
+++ b/src/BloomBrowserUI/bookEdit/StyleEditor/StyleEditor.less
@@ -2,6 +2,8 @@
 //which we're doing for convenience so that we don't have to get it in the installer and then import it explictly
 @import (less) '../../node_modules/select2/dist/css/select2.css';
 
+@dialogZindexPlusOne: 60001; // the dialog's z-index is set to 60000 in bookEdit/css/bloomDialog.less
+
 #format-toolbar {
     *{
         font-family: "Segoe UI", Arial, sans-serif;
@@ -78,9 +80,9 @@
     }
 }
 
-//the select2 dropdown gets appended to the body, not to our dialog, so it needs a really high z-index to show above the dialog.
+//the select2 dropdown gets appended to the body, not to our dialog, so its z-index must be at least as high as the dialog's z-index
 .select2-container{
-    z-index: 30000;
+    z-index: @dialogZindexPlusOne;
 }
 
 #spacingRow{
